[package]
edition = "2021"
name = "rp2040-display"
version = "0.5.0"
license = "MIT OR Apache-2.0"
rust-version = "1.77"

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m = "0.7.7" 
embedded-hal = { version = "1.0.0" }
embedded-graphics = "0.7.1"
dht-sensor = "0.2.1"
fugit = "0.3.6"
panic-halt = "0.2.0"
rp-pico = "0.9"
rp2040-hal = { version = "0.10.0", features = [
    "critical-section-impl",
    "rt",
    "defmt",
] }
cfg-if = "1.0"
ssd1306 = "0.7.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[features]
default = ["dht22"]
dht11 = []
dht22 = []
